--- a/index.html
+++ b/index.html
@@ -9,27 +9,34 @@
 </head>
 
 <body>
-
-        <header>Header</header>
-
+    <div class="mega-container">
+        <header
+            >Header
+        </header>
+        <br>
         <div>
-            <nav>nav</nav>
+            <nav>
+                nav
+            </nav>
         </div>
-
-        <div>
-            <section>section</section>
-            <article>article
-            <h1>h1,h2,h3</h1>
-            <p>paragraph</p>
-            </article>
-
-         </div>
-
-            <aside>aside</aside>
-
+        <br>
+        <div class="container">
+            <section> section 
+                <article>article
+                    <h1>h1,h2,h3</h1>
+                    <p>paragraph</p>
+                </article>
+            </section>
+            <aside class="container">
+                aside
+            </aside>
         </div>
-        <footer>footer</footer>
+        <br>
+        <footer>
+            footer
+        </footer>
+    </div>
+</body>
 
     
-</body>
 </html>
